MIET-147: Missing https in swagger file

--- a/mietrecht_ch/public/html/swagger.html
+++ b/mietrecht_ch/public/html/swagger.html
@@ -16,7 +16,7 @@
 <script>
   window.onload = () => {
     window.ui = SwaggerUIBundle({
-      url: 'mietrecht-swagger.yaml',
+      url: 'mietrecht-ch-swagger.yaml',
       dom_id: '#swagger-ui',
     });
   };
